[package]
name = "download"
version = "0.1.0"
edition = "2021"

[target.x86_64-pc-windows-gnu]
linker = "x86_64-w64-mingw32-gcc"
ar = "x86_64-w64-mingw32-ar"

[dependencies]
tokio = { version = "1", features = ["full"] }
csv = "1.3.1"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0"
reqwest = { version = "0.13", default-features = false, features = ["rustls", "webpki-roots"] }
tar = "0.4.45"
xz2 = "0.1.7"
zip = "0.6"
